{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 350,
  "lineage": "41407f47-d6d2-439b-0bd1-fec0b97bc60b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8c303e6b2e300dd",
            "arn": "arn:aws:ec2:eu-west-3:248032057693:instance/i-0adbc72e2b291b3ce",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "backend-instance-profile",
            "id": "i-0adbc72e2b291b3ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03dc3720c3f6364f3"
              }
            ],
            "primary_network_interface_id": "eni-03dc3720c3f6364f3",
            "private_dns": "ip-10-0-0-137.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.137",
            "public_dns": "ec2-51-44-250-53.eu-west-3.compute.amazonaws.com",
            "public_ip": "51.44.250.53",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d92c08a91ba671f8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025df9b6aa3e4a2d3",
            "tags": {
              "Name": "mi-ec2-1"
            },
            "tags_all": {
              "Name": "mi-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0658bfd0525265056"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "i-0adbc72e2b291b3ce",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_db_instance.rds",
            "aws_db_subnet_group.subnet-group",
            "aws_iam_instance_profile.backend_profile",
            "aws_iam_role.backend_role",
            "aws_security_group.sg-privado",
            "aws_security_group.sg_publico",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8c303e6b2e300dd",
            "arn": "arn:aws:ec2:eu-west-3:248032057693:instance/i-090b220269c0d9e89",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "backend-instance-profile",
            "id": "i-090b220269c0d9e89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e4ca18e8e5b97aeb"
              }
            ],
            "primary_network_interface_id": "eni-0e4ca18e8e5b97aeb",
            "private_dns": "ip-10-0-1-219.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_dns": "ec2-13-38-15-229.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.15.229",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b2bce636b42f5f5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03851922e5f32120a",
            "tags": {
              "Name": "mi-ec2-2"
            },
            "tags_all": {
              "Name": "mi-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0658bfd0525265056"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "i-090b220269c0d9e89",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_db_instance.rds",
            "aws_db_subnet_group.subnet-group",
            "aws_iam_instance_profile.backend_profile",
            "aws_iam_role.backend_role",
            "aws_security_group.sg-privado",
            "aws_security_group.sg_publico",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:internet-gateway/igw-0658c1f31be1fd4f0",
            "id": "igw-0658c1f31be1fd4f0",
            "owner_id": "248032057693",
            "region": "eu-west-3",
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_privado",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:network-acl/acl-01bf9be98fab80245",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              }
            ],
            "id": "acl-01bf9be98fab80245",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3306
              }
            ],
            "owner_id": "248032057693",
            "region": "eu-west-3",
            "subnet_ids": [
              "subnet-064424e2793298217",
              "subnet-06f8d69fca015319b"
            ],
            "tags": {
              "Name": "acl-privado"
            },
            "tags_all": {
              "Name": "acl-privado"
            },
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:network-acl/acl-02378182900473868",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02378182900473868",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.3.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "85.87.5.203/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "248032057693",
            "region": "eu-west-3",
            "subnet_ids": [
              "subnet-025df9b6aa3e4a2d3",
              "subnet-03851922e5f32120a"
            ],
            "tags": {
              "Name": "acl-publico"
            },
            "tags_all": {
              "Name": "acl-publico"
            },
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0658c1f31be1fd4f0",
            "id": "r-rtb-0b20211ca92c96e471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-3",
            "route_table_id": "rtb-0b20211ca92c96e47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-3",
            "route_table_id": "rtb-0b20211ca92c96e47"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:route-table/rtb-0bad53818ba313ae8",
            "id": "rtb-0bad53818ba313ae8",
            "owner_id": "248032057693",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "rtb-0bad53818ba313ae8",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:route-table/rtb-0b20211ca92c96e47",
            "id": "rtb-0b20211ca92c96e47",
            "owner_id": "248032057693",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0658c1f31be1fd4f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "rtb-0b20211ca92c96e47",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055eb019ac68ad7e9",
            "region": "eu-west-3",
            "route_table_id": "rtb-0b20211ca92c96e47",
            "subnet_id": "subnet-025df9b6aa3e4a2d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "rtbassoc-055eb019ac68ad7e9",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046dfaa3aba28f480",
            "region": "eu-west-3",
            "route_table_id": "rtb-0b20211ca92c96e47",
            "subnet_id": "subnet-03851922e5f32120a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "rtbassoc-046dfaa3aba28f480",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ebb83d5c2f3752c",
            "region": "eu-west-3",
            "route_table_id": "rtb-0bad53818ba313ae8",
            "subnet_id": "subnet-06f8d69fca015319b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "rtbassoc-07ebb83d5c2f3752c",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_route_table.rt-private",
            "aws_subnet.private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e96eb5e3d746dfb",
            "region": "eu-west-3",
            "route_table_id": "rtb-0bad53818ba313ae8",
            "subnet_id": "subnet-064424e2793298217"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "rtbassoc-08e96eb5e3d746dfb",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_route_table.rt-private",
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-privado",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:security-group/sg-0b10155b164c93ab8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b10155b164c93ab8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0658bfd0525265056"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20260420172022629800000005",
            "name_prefix": "terraform-",
            "owner_id": "248032057693",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-privado"
            },
            "tags_all": {
              "Name": "sg-privado"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "sg-0b10155b164c93ab8",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.sg_publico",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:security-group/sg-0658bfd0525265056",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0658bfd0525265056",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "85.87.5.203/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260420172020200900000003",
            "name_prefix": "terraform-",
            "owner_id": "248032057693",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-publico"
            },
            "tags_all": {
              "Name": "sg-publico"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "sg-0658bfd0525265056",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:subnet/subnet-06f8d69fca015319b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f8d69fca015319b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248032057693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "subnet-private1"
            },
            "tags_all": {
              "Name": "subnet-private1"
            },
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "subnet-06f8d69fca015319b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:subnet/subnet-064424e2793298217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064424e2793298217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248032057693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "subnet-private2"
            },
            "tags_all": {
              "Name": "subnet-private2"
            },
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "subnet-064424e2793298217",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:subnet/subnet-025df9b6aa3e4a2d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025df9b6aa3e4a2d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248032057693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "subnet-public1"
            },
            "tags_all": {
              "Name": "subnet-public1"
            },
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "subnet-025df9b6aa3e4a2d3",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:subnet/subnet-03851922e5f32120a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03851922e5f32120a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248032057693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "subnet-public2"
            },
            "tags_all": {
              "Name": "subnet-public2"
            },
            "vpc_id": "vpc-0fc2126f5f7f2a85f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "subnet-03851922e5f32120a",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248032057693:vpc/vpc-0fc2126f5f7f2a85f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036f5a662c42c9414",
            "default_route_table_id": "rtb-0415e26177dfd2679",
            "default_security_group_id": "sg-0df74d7cc4bf7ff6a",
            "dhcp_options_id": "dopt-09865fc7288f45675",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc2126f5f7f2a85f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0415e26177dfd2679",
            "owner_id": "248032057693",
            "region": "eu-west-3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248032057693",
            "id": "vpc-0fc2126f5f7f2a85f",
            "region": "eu-west-3"
          }
        }
      ]
    }
  ]
}